<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/contacts_app"
        android:textColor="@color/colorPrimaryText"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/hiddenLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:visibility="visible">

        <ImageView
            android:id="@+id/imgMood"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/mood"
            app:srcCompat="@drawable/good" />

        <ImageView
            android:id="@+id/imgCall"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/icons"
            android:focusable="true"
            app:srcCompat="@drawable/call" />

        <ImageView
            android:id="@+id/imgWeb"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/icons"
            android:focusable="true"
            app:srcCompat="@drawable/web" />

        <ImageView
            android:id="@+id/imgLocation"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:contentDescription="@string/icons"
            android:focusable="true"
            app:srcCompat="@drawable/location" />
    </LinearLayout>

    <Button
        android:id="@+id/btnCreate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorAccent"
        android:text="@string/create_new_contact"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>